Добавляет что-то

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    <header>
+    <div>
+        <div class="container">
         <!-- Заголовок Хедера -->
             <a href="./index.html" class="logo-second link"><span class="logo">Web</span>Studio</a>
             <!-- Навигация -->
@@ -29,17 +30,21 @@
                     <li><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
                 </ul>
+            </div>
     </header>
     <main>
         <!-- Фон на Hero -->
         <div></div>
         <!-- Hero -->
         <section class="hero">
+            <div class="container">
             <h1 class="hero-captoin">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="button">Заказать услугу</button>
+            </div>
         </section>
         <!-- Особенности веб студии -->
         <section class="hang">
+            <div class="container">
             <h2 class="hang-captoin">Особенности</h2>
             <ul class="hang-list list">
                 <li>
@@ -59,9 +64,11 @@
                     <p class="items-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+            </div>
         </section>
         <!-- Примеры работ -->
         <section class="work-examples">
+            <div class="container">
             <h2 class="examples-title">Чем мы занимаемся</h2>
             <ul class="examples-list list">
                 <li>
@@ -74,9 +81,11 @@
                     <img src="./images/box3.jpg" alt="Палитра с цветом" width="370">
                 </li>
             </ul>
+            </div>
         </section>
         <!-- Секция наша команда -->
         <section class="my-team">
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
                 <li>
@@ -100,10 +109,12 @@
                     <p class="worker-position">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <!-- Подвал -->
     <footer class="footer">
+        <div class="container">
         <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
         <address class="address-block">
         <ul class="address-list list">
@@ -118,6 +129,7 @@
             </li>
         </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
