--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    <div>
+    <header>
         <div class="container">
-        <!-- Заголовок Хедера -->
+            <!-- Заголовок Хедера -->
             <a href="./index.html" class="logo-second link"><span class="logo">Web</span>Studio</a>
             <!-- Навигация -->
             <nav class="nav">
@@ -30,7 +30,7 @@
                     <li><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
+        </div>
     </header>
     <main>
         <!-- Фон на Hero -->
@@ -38,15 +38,15 @@
         <!-- Hero -->
         <section class="hero">
             <div class="container">
-            <h1 class="hero-captoin">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
+                <h1 class="hero-captoin">Эффективные решения<br> для вашего бизнеса</h1>
+                <button type="button" class="button-hero">Заказать услугу</button>
             </div>
         </section>
         <!-- Особенности веб студии -->
-        <section class="hang">
+        <section class="section">
             <div class="container">
-            <h2 class="hang-captoin">Особенности</h2>
-            <ul class="hang-list list">
+                <h2 class="hang-captoin">Особенности</h2>
+                <ul class="hang-list list">
                 <li>
                     <h3 class="list-items">Внимание к деталям</h3>
                     <p class="items-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -63,11 +63,11 @@
                     <h3 class="list-items">Современные технологии</h3>
                     <p class="items-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-            </ul>
+                </ul>
             </div>
         </section>
         <!-- Примеры работ -->
-        <section class="work-examples">
+        <section class="section">
             <div class="container">
             <h2 class="examples-title">Чем мы занимаемся</h2>
             <ul class="examples-list list">
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!-- Секция наша команда -->
-        <section class="my-team">
+        <section class="section my-team">
             <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
@@ -118,13 +118,13 @@
         <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
         <address class="address-block">
         <ul class="address-list list">
-            <li>
+            <li class="footer-list">
                 <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
+            <li class="footer-list"> 
                 <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="footer-list">
                 <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
             </li>
         </ul>
