--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <!-- Заголовок Хедера -->
         <a href="./index.html" class="logo-second link"><span class="logo">Web</span>Studio</a>
         <!-- Навигация -->
@@ -29,10 +30,12 @@
             <li><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <main>
         <!-- Фильтр -->
-        <section class="filter">
+        <section class="section">
+            <div class="container">
         <h1 class="filter-title">Портфолио</h1>
         <ul class="filter-list list">
             <li>
@@ -98,24 +101,27 @@
                     <p class="services-text">Приложение</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <!-- Подвал -->
     <footer class="footer">
+        <div class="container">
         <a href="./index.html" class="icon-second link"><span class="icon">Web</span>Studio</a>
         <address class="address-block">
         <ul class="address-list list">
-            <li>
+            <li class="footer-list">
                 <a href="https://goo.gl/maps/MMKUuwx7VS9g7BKy7" class="address-map link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
+            <li class="footer-list">
                 <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="footer-list">
                 <a href="tel:+380961111111" class="address-item link">+38 096 111 11 11</a>
             </li>
         </ul>
         </address>
+        </div>
     </footer>
 </body>
 </html>
