Добавляет флекс боксы

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="container">
             <!-- Заголовок Хедера -->
+                <div class="header">
             <a href="./index.html" class="logo-second link"><span class="logo">Web</span>Studio</a>
             <!-- Навигация -->
             <nav class="nav">
@@ -30,6 +31,7 @@
                     <li><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
                 </ul>
+                </div>
         </div>
     </header>
     <main>
@@ -47,19 +49,19 @@
             <div class="container">
                 <h2 class="hang-captoin">Особенности</h2>
                 <ul class="hang-list list">
-                <li>
+                <li class="main-hang-list">
                     <h3 class="list-items">Внимание к деталям</h3>
                     <p class="items-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="main-hang-list">
                     <h3 class="list-items">Пунктуальность</h3>
                     <p class="items-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="main-hang-list">
                     <h3 class="list-items">Планирование</h3>
                     <p class="items-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="main-hang-list">
                     <h3 class="list-items">Современные технологии</h3>
                     <p class="items-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -71,13 +73,13 @@
             <div class="container">
             <h2 class="examples-title">Чем мы занимаемся</h2>
             <ul class="examples-list list">
-                <li>
+                <li class=" pic-list">
                     <img src="./images/box1.jpg" alt="Семантическая верстка" width="370">
                 </li>
-                <li>
+                <li class="pic-list">
                     <img src="./images/box2.jpg" alt="Адаптивня верстка" width="370">
                 </li>
-                <li>
+                <li class="pic-list">
                     <img src="./images/box3.jpg" alt="Палитра с цветом" width="370">
                 </li>
             </ul>
@@ -88,22 +90,22 @@
             <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list list">
-                <li>
+                <li class="worker">
                     <img src="./images/img1.jpg" alt="Сотрудник Игорь Демьяненко" width="270">
                     <h3 class="team-worker title-h3">Игорь Демьяненко</h3>
                     <p class="worker-position">Product Designer</p>
                 </li>
-                <li>
+                <li class="worker">
                     <img src="./images/img2.jpg" alt="Сотрудник Ольга Репина" width="270">
                     <h3 class="team-worker title-h3">Ольга Репина</h3>
                     <p class="worker-position">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="worker">
                     <img src="./images/img3.jpg" alt="Сотрудник Николай Тарасов" width="270">
                     <h3 class="team-worker title-h3">Николай Тарасов</h3>
                     <p class="worker-position">Marketing</p>
                 </li>
-                <li>
+                <li class="worker">
                     <img src="./images/img4.jpg" alt="Сотрудник Михаил Ермаков" width="270">
                     <h3 class="team-worker title-h3">Михаил Ермаков</h3>
                     <p class="worker-position">UI Designer</p>
