Исправляет расположение. добавляет рамки

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-<header>
+<header class="line-header">
     <div class="container">
         <!-- Заголовок Хедера -->
         <div class="header">
@@ -21,8 +21,8 @@
             <!-- Навигация -->
             <nav class="nav">
                 <ul class="nav-list list">
-                    <li class="list-link"><a href="./index.html" class="nav-link link current">Студия</a></li>
-                    <li class="list-link"><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+                    <li class="list-link"><a href="./index.html" class="nav-link link">Студия</a></li>
+                    <li class="list-link"><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
                     <li class="list-link"><a href="" class="nav-link link">Контакты</a></li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
         <!-- Фильтр -->
         <section class="section">
             <div class="container">
-        <h1 class="filter-title">Портфолио</h1>
+        <h1 class="filter-title visually-hidden">Портфолио</h1>
         <ul class="filter-list list">
             <li class="button-list">
                 <button class="button-filter" type="button">Все</button>
