--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    <header>
+    <header class="line-header">
         <div class="container">
             <!-- Заголовок Хедера -->
                 <div class="header">
@@ -47,7 +47,7 @@
         <!-- Особенности веб студии -->
         <section class="section">
             <div class="container">
-                <h2 class="hang-captoin">Особенности</h2>
+                <h2 class="hang-captoin visually-hidden">Особенности</h2>
                 <ul class="hang-list list">
                 <li class="main-hang-list">
                     <h3 class="list-items">Внимание к деталям</h3>
