Фикс роботы после ментора

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </section>
         <!-- Примеры работ -->
-        <section class="section">
+        <section class="section examples">
             <div class="container">
             <h2 class="examples-title">Чем мы занимаемся</h2>
             <ul class="examples-list list">
@@ -92,23 +92,31 @@
             <ul class="team-list list">
                 <li class="worker">
                     <img src="./images/img1.jpg" alt="Сотрудник Игорь Демьяненко" width="270">
+                    <div class="worker-title">
                     <h3 class="team-worker title-h3">Игорь Демьяненко</h3>
                     <p class="worker-position">Product Designer</p>
+                    </div>
                 </li>
                 <li class="worker">
                     <img src="./images/img2.jpg" alt="Сотрудник Ольга Репина" width="270">
+                    <div class="worker-title">
                     <h3 class="team-worker title-h3">Ольга Репина</h3>
                     <p class="worker-position">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="worker">
                     <img src="./images/img3.jpg" alt="Сотрудник Николай Тарасов" width="270">
+                    <div class="worker-title">
                     <h3 class="team-worker title-h3">Николай Тарасов</h3>
                     <p class="worker-position">Marketing</p>
+                    </div>
                 </li>
                 <li class="worker">
                     <img src="./images/img4.jpg" alt="Сотрудник Михаил Ермаков" width="270">
+                    <div class="worker-title">
                     <h3 class="team-worker title-h3">Михаил Ермаков</h3>
                     <p class="worker-position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
