--- a/portfolio.html
+++ b/portfolio.html
@@ -59,48 +59,66 @@
             <ul class="list-services list">
                 <li class="services">
                     <img src="./images/img5.jpg" alt="Ноутбук с сайтом" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Технокряк</h2>
                     <p class="services-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img6.jpg" alt="Баскетбольный постер" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Постер New Orlean vs Golden Star</h2>
                     <p class="services-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img7.jpg" alt="Рыба логотип ресторана" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Ресторан Seafood</h2>
                     <p class="services-text">Приложение</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img8.jpg" alt="Наушники" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Проект Prime</h2>
                     <p class="services-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img9.jpg" alt="Две коробки" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Проект Boxes</h2>
                     <p> class="services-text"Приложение</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img10.jpg" alt="Мак" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Inspiration has no Borders</h2>
                     <p class="services-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img11.jpg" alt="Книга" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Издание Limited Edition</h2>
                     <p class="services-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img12.jpg" alt="Бирка" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Проект LAB</h2>
                     <p class="services-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="services">
                     <img src="./images/img13.jpg" alt="Ноутбук с сайтом" width="370">
+                    <div class="services-block">
                     <h2 class="services-title">Growing Business</h2>
                     <p class="services-text">Приложение</p>
+                    </div>
                 </li>
             </ul>
             </div>
